[tool.poetry]
name = "poetry-tools"
version = "1.2.3"
description = ""
authors = ["Yukihiro <12211343+y-marui@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
click = "^8.1.2"
pre-commit-hooks = "^4.2.0"
bump2version = "^1.0.1"
click-default-group-colors = {git = "https://github.com/y-marui/click-default-group-colors", rev = "main"}
poetry = "^1.3.1"
pre-commit = "^2.20.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poetry-tools = "poetry_tools.cli:cli"
